# marverix.github.io

./: .gitignore  paleta  pelicanconf.py  pyproject.toml
.github/workflows/: deploy.yaml
content/: gdybym-nie-byl-bity-to-bym-nie-wyrosl-na-ludzi.rst  ksiezniczka-selene-i-piotr-the-woznica.rst  pandaboard-es-rev-b3.rst  powiedz.rst  psalm-1.rst
content/pages/: about.rst
content/posts/2010/: sen-w-snie.rst
content/posts/2015/: tego-dnia-jednego-w-roku.rst
content/posts/2017/: 2222.rst  ballada-dla-nieznajomej.rst  krajobraz-serca-twoj.rst  witaj-swiecie.rst
content/posts/2019/: glebia-przyzywa-glebie-hukiem-wodospadow.rst
content/posts/2020/: psalm-2.rst
content/posts/2021/: alpine-linux-na-pandaboard-es-rev-b3.rst  hurricane-electric-free-dns-moje-odkrycie-roku.rst  komputer-masz-w-swojej-kieszeni.rst  niechciany-pracownik-sklepu-w-twojej-przegladarce.rst  obsluga-ftp-znika-z-firefoxa.rst  virtualmin-nigdy-wiecej.rst
content/posts/2025/: gah-github-releases-app-installer.md
theme/: LICENSE
theme/static/css/: style.css
theme/static/js/: script.js
theme/templates/: article.html  base.html
theme/templates/partials/: loop.html
